Make sure MainActivity finishes when backgrounded

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:theme="@style/Theme.Rebooter">
         <activity android:name=".MainActivity"
             android:theme="@style/Theme.Rebooter.Null"
-            android:excludeFromRecents="true">
+            android:excludeFromRecents="true"
+            android:autoRemoveFromRecents="true"
+            android:clearTaskOnLaunch="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
