--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:theme="@style/Theme.Rebooter.Null"
             android:excludeFromRecents="true"
             android:autoRemoveFromRecents="true"
-            android:clearTaskOnLaunch="true">
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
