--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation "com.github.topjohnwu.libsu:core:3.0.2"
     implementation 'com.github.ChickenHook:RestrictionBypass:2.2'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.github.skydoves:rainbow:1.0.3'
+    implementation 'com.github.florent37:shapeofview:1.4.7'
 
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
